--- a/Database/캐싱과 캐싱전략.md
+++ b/Database/캐싱과 캐싱전략.md
@@ -1,6 +1,6 @@
 # 캐싱과 캐싱전략
 
-이전부터 캐싱 전략에 대해 정리해야겠다고 마음 먹고 있었는데 오늘에서야 정리하게 되었다.  캐싱이 무엇인지부터 짚고 그다음에 정리해야겠다.
+이전부터 캐싱 전략에 대해 정리해야겠다고 마음 먹고 있었는데 오늘에서야 정리하게 되었다.  캐싱이 무엇인지부터 짚어보고 캐싱 전략에 대해 알아보자.
 
 <br>
 
