--- a/ORM/JPA/다양한 연관관계 매핑 - 일대일.md
+++ b/ORM/JPA/다양한 연관관계 매핑 - 일대일.md
@@ -79,7 +79,7 @@ public class Member {
     
     private String username;
     
-    // 주 테이블과 대상 테이블, 둘다 있는 경우 양방향
+    // @OneToOne : 주 테이블과 대상 테이블 컬럼 양쪽다 있는 경우 양방향
     @OneToOne
     @JoinColumn(name = "LOCKER_ID")
     private Locker locker;
@@ -154,7 +154,6 @@ public class Locker {
 
     private String name;
 
-    // Member 가 연관관계의 주인이 된다.
     @OneToOne
     @JoinColumn(name = "MEMBER_ID")
     private Member member;
