--- a/Java/oop/[북스터디 메모] 자객원이 - 3장 자바와 객체지향.md
+++ b/Java/oop/[북스터디 메모] 자객원이 - 3장 자바와 객체지향.md
@@ -1,6 +1,6 @@
-# Interface(ISP) vs Inheritance(LSP)
+# 👀️ Interface(ISP) vs Inheritance(LSP)
 
-# 인터페이스 분리 원칙 : ISP
+## 인터페이스 분리 원칙 : ISP
 
 - “**클라이언트는 자신이 사용하는 메소드에만 의존해야 한다”를 의미한다.**
 - 인터페이스 분리가 안된 예시
@@ -18,16 +18,22 @@
 
 - 인터페이스 분리 원칙은 클라이언트를 기준으로 인터페이스를 분리함으로써, 클라이언트로부터 발생하는 인터페이스의 여파가 다른 클라이언트에 미치는 영향을 최소화하는 것을 목표로 한다.
 
-# 리스코프 치환 원칙 : LSP
+## 리스코프 치환 원칙 : LSP
 
 - “상위 클래스와 하위 클래스가 상속 관계를 이루고 있을 때 필요한 프로그램의 속성 변경없이 상위 타입을 하위 타입으로 변환할 수 있어야 한다.”를 의미한다.
 - 너무나 익숙한 예시
 
   ![Untitled2.png](./assets/Untitled%202.png)
 
-# 명시적 형변환(Casting) vs 암묵적 형변환(Promotion)
+<br><br>
 
-# 명시적 형변환(Casting)
+---
+
+# 👀️ 명시적 형변환(Casting) vs 암묵적 형변환(Promotion)
+
+<br>
+
+## 명시적 형변환(Casting)
 
 - 큰 타입에서 작은 타입으로의 변환
 - 명시적으로 타입 변환을 작성한다.
@@ -40,13 +46,17 @@ byte b = (byte) i;
 
 - Casting 또는 DownCasting 으로 이해하면 편하다.
 
-# 암묵적 형변환(Promotion)
+## 암묵적 형변환(Promotion)
 
 - 작은 타입에서 큰 타입으로의 변환
 - 프로그램 실행 도중 자동으로 일어난다.
 - Promotion 또는 UpCasting 으로 이해하면 편하다.
 
-# Interface는 왜 형용사로 작성할까?
+<br>
+
+---
+
+# 👀️ Interface는 왜 형용사로 작성할까?
 
 - 인터페이스의 목적을 생각해보자.
 
@@ -66,6 +76,7 @@ byte b = (byte) i;
 - 추상 클래스는 동작에 대해 정의할 수 있다.
 - 마치 “*이 클래스는 이렇게 생겼어야 하고, 공통점이 있으니 빈칸을 채워라!*”라는 선언문같다.
 
+<br>
 
 ```
 이 페이지는 '스프링 입문을 위한 자바 객체 지향의 원리와 이해'를 읽고 메모하기 위해 작성한 내용이 포함되어 있습니다.
