스타일 수정

--- a/TDD/테스트 종류에 대해 슬쩍 알아보기.md
+++ b/TDD/테스트 종류에 대해 슬쩍 알아보기.md
@@ -1,5 +1,7 @@
 # 테스트 종류에 대해 슬쩍 알아보기
 
+---
+
 ## 유닛 테스트(Unit Test)
 
 - 가장 작은 단위의 테스트
@@ -11,12 +13,16 @@
   - 비용 관점에서 고민하고 판단한다.
 - 하나의 메서드가 잘 동작함을 확인할 수 있지만 결합되었을 때 올바르게 동작하는지 여부는 확인할 수 없다.
 
+<br>
+
 ## 전 구간 테스트(End-To-End Test)
 
 - 전체 시스템을 처음부터 끝까지 테스트하여 잘 동작하는지 확인한다.
 - 전 구간 테스트를 통해 문제 영역에 대해 파악하게 되면 서비스를 분할하거나 병합하는 단계로 발전할 가능성이 있다.
 - 테스트 범위가 넓어 실패할 가능성이 매우 높댜.
 - 테스트 작성이 어렵고, 작성된 테스트도 신뢰도가 낮을 수 있다.
+
+<br>
 
 ## 통합 테스트(Integration Test)
 
@@ -25,6 +31,8 @@
 - 단위테스트를 선행한다.
 - 단위테스트를 마치면 모듈을 통합하여 통합 테스트를 수행한다.
 - 단위테스트에서 발견하지 못한 버그를 확인할 수 있다.
+
+<br>
 
 ## 인수 테스트(Acceptance Test)
 
@@ -36,16 +44,18 @@
 - 비즈니스 로직은 API를 통해 드러나기 때문에 인수 테스트는 주로 API 확인 테스트로 이뤄진다.
 - 인수 테스트는 애플리케이션이 요구사항(인수 조건)대로 잘 동작하는지 테스트하기 위함이다.
 
+<br>
+
 ## 참고 이미지
 
 ![Untitled.png](./assets/Untitled.png)
 
 출처: [https://corgibytes.com/blog/2016/03/28/pyramid-of-tests/](https://corgibytes.com/blog/2016/03/28/pyramid-of-tests/)
 
-**→ 유닛 테스트가 가장 넓게 하층부를 차지하는데 테스트 케이스의 개수를 나타낸다.**
+**→ 테스트 케이스의 개수를 기준으로 나타냈을 때 유닛 테스트가 가장 넓게 하층부를 차지한다.**
 
-(유닛 테스트 > 통합 테스트 >  인수테스트)
+: 유닛 테스트 > 통합 테스트 >  인수테스트
 
 **→ 코드 범위 기준으로는 역순이라고 볼 수 있다.**
 
-(유닛 테스트 < 통합 테스트 <  인수테스트)
+: 유닛 테스트 < 통합 테스트 <  인수테스트
