스타일, 내용 일부 수정

--- a/TDD/테스트 종류에 대해 슬쩍 알아보기.md
+++ b/TDD/테스트 종류에 대해 슬쩍 알아보기.md
@@ -1,6 +1,6 @@
 # 테스트 종류에 대해 슬쩍 알아보기
 
----
+<br>
 
 ## 유닛 테스트(Unit Test)
 
@@ -54,8 +54,8 @@
 
 **→ 테스트 케이스의 개수를 기준으로 나타냈을 때 유닛 테스트가 가장 넓게 하층부를 차지한다.**
 
-: 유닛 테스트 > 통합 테스트 >  인수테스트
+: 유닛 테스트 > 통합 테스트 >  인수 테스트
 
-**→ 코드 범위 기준으로는 역순이라고 볼 수 있다.**
+**→ 코드 범위 기준으로 나타냈을 때는 역순이다.**
 
-: 유닛 테스트 < 통합 테스트 <  인수테스트
+: 인수 테스트 > 통합 테스트 >  유닛 테스트
