스타일 수정

--- a/TDD/테스트 종류에 대해 슬쩍 알아보기.md
+++ b/TDD/테스트 종류에 대해 슬쩍 알아보기.md
@@ -2,7 +2,7 @@
 
 <br>
 
-## 유닛 테스트(Unit Test)
+## 👀️유닛 테스트(Unit Test)
 
 - 가장 작은 단위의 테스트
 - 보통 메서드 단위를 테스트한다.
@@ -15,7 +15,7 @@
 
 <br>
 
-## 전 구간 테스트(End-To-End Test)
+## 👀️ 전 구간 테스트(End-To-End Test)
 
 - 전체 시스템을 처음부터 끝까지 테스트하여 잘 동작하는지 확인한다.
 - 전 구간 테스트를 통해 문제 영역에 대해 파악하게 되면 서비스를 분할하거나 병합하는 단계로 발전할 가능성이 있다.
@@ -24,7 +24,7 @@
 
 <br>
 
-## 통합 테스트(Integration Test)
+## 👀️ 통합 테스트(Integration Test)
 
 - 기본적으로 여러 다른 시스템간 상호작용이 잘 이루어지는지 테스트하는 것을 의미한다.
 - 모듈을 통합하는 단계에서 수행한다.
@@ -34,7 +34,7 @@
 
 <br>
 
-## 인수 테스트(Acceptance Test)
+## 👀️ 인수 테스트(Acceptance Test)
 
 - 단위 테스트, 통합 테스트와 범위가 다르다.
 - 비즈니스 중심으로 테스트한다.
