Update 지연 로딩과 즉시 로딩.md

--- a/ORM/JPA/지연 로딩과 즉시 로딩.md
+++ b/ORM/JPA/지연 로딩과 즉시 로딩.md
@@ -16,7 +16,7 @@
 
 - 지연 로딩을 하기 위해서는 프록시가 필요하다.
 - **@OneToMany, @ManyToMany** 어노테이션은 Fetch 전략 중 **지연 로딩(`FetchType.LAZY`)** 이 디폴트
-- join 이 발생하지 않는 조회
+- **join 이 발생하지 않는 조회**
 - 엔티티가 없는 걸 감지했을 때 로딩을 시작한다.
 
 ### 지연 로딩의 예시
@@ -31,7 +31,7 @@
 ### 즉시 로딩의 특징
 
 - join 을 사용하여 추가 쿼리 실행 없이 한번에 수행한다.
-- 외래키 null 허용여부에 따라서  **true** 일 경우 **outer join**, **false**일 경우 **inner join** 을 수행한다.
+- 외래키 null 허용여부에 따라서  **true** 일 경우 **`outer join`**, **false**일 경우 **`inner join`** 을 수행한다.
 
 ### 즉시 로딩의 예시
 
